--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Music App Landing Page</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:500,700|Wire+One" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -45,6 +46,12 @@
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             	 viewBox="0 0 1208 314" style="enable-background:new 0 0 1208 314;" xml:space="preserve">
             <style type="text/css">
+
+              @font-face {
+                font-family: AirwaysPERSONALUSEONLY;
+                src: url('../Airways_PERSONAL_USE_ONLY copy.ttf');
+              }
+              
             	.st0{fill:none;}
             	.st1{fill:#C63F17;stroke:#FFA270;stroke-width:3;stroke-miterlimit:10;}
             	.st2{font-family:'AirwaysPERSONALUSEONLY';}
