--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -38,7 +38,7 @@
 
       <main>
         <% if (message) { -%>
-          <p style="background-color: rgba(255, 138, 101, 0.7)"><%= message %></p>
+          <p id="home-message" style="background-color: rgba(255, 138, 101, 0.7)"><%= message %></p>
         <% } -%>
       <div id="homepage-jumbo">
         <div class = "jumbotron">
