--- a/public/less/style.less
+++ b/public/less/style.less
@@ -20,6 +20,13 @@ html {
 	}
 }
 
+#home-message {
+	color: white;
+	text-align: center;
+	font-family: 'Permanent Marker', cursive;
+	font-size: 24px;
+}
+
 #like-button, #event-button {
 	background-color: #607d8b;
 	color: white;
