--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -51,7 +51,7 @@
                 font-family: AirwaysPERSONALUSEONLY;
                 src: url('../Airways_PERSONAL_USE_ONLY copy.ttf');
               }
-              
+
             	.st0{fill:none;}
             	.st1{fill:#C63F17;stroke:#FFA270;stroke-width:3;stroke-miterlimit:10;}
             	.st2{font-family:'AirwaysPERSONALUSEONLY';}
@@ -163,7 +163,7 @@
          <div class="modal-dialog" role="document">
            <div class="modal-content">
              <div class="modal-header">
-               <h5 class="modal-title" id="loginModalLabel">Login Below</h5>
+               <h5 class="modal-title" id="logInModalLabel">Login Below</h5>
 
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
