added byline to home page

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -64,7 +64,7 @@
 
 
 
-            <h1>Live Music Finder App</h1>
+            <h1>Share Your Ears With Your Peers!</h1>
         </div>
       </div>
     </div>
