--- a/public/less/style.less
+++ b/public/less/style.less
@@ -180,13 +180,14 @@ ul {
 //homepage
 .jumbotron {
     background-color:transparent !important;
+    margin: 0 !important;
 }
 
 #homepage-jumbo, #index-jumbo {
 	background-color: #62717b;
 		h1 {
 			font-family: @headerFont;
-			font-size: 5em;
+			font-size: 3em;
 			color: #e2f1f8;
 		}
 		p {
@@ -195,7 +196,11 @@ ul {
 		}
 	}
 
+
 //carousel
+#carousel {
+	background-color: rgba(207, 216, 220, 0.7);
+}
 
 //MODALS
 #loginModal, #registerModal {
