--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -216,7 +216,7 @@
 
                      <form action="/register" method="POST" id="registration">
                        <div class="form-group">
-                         <h4>Sign up</h4>
+                         <h4>Sign Up</h4>
                            <input type="text" name="username" placeholder="Username">
                            <input type="text" name="email" placeholder="Email">
                            <input type="password" name="password" placeholder="Password">
