--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -63,7 +63,7 @@
     						<label class= "control-label" for="artistDescription">Artist Description:</label><br />
     						<textarea name="description" rows="12" cols="80" placeholder="Description"></textarea><br /><br />
 
-    						<button class="btn btn-success mb-2 btn-block" type="submit">Create Artist</button>
+    						<button id="new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Create Artist</button>
     					</form>
     				</div>
 
