--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -38,7 +38,7 @@
 
       <main>
         <% if (message) { -%>
-          <p id="home-message" style="background-color: rgba(255, 138, 101, 0.7)"><%= message %></p>
+          <p style="background-color: rgba(255, 138, 101, 0.7)"><%= message %></p>
         <% } -%>
       <div id="homepage-jumbo">
         <div class = "jumbotron">
@@ -163,7 +163,7 @@
          <div class="modal-dialog" role="document">
            <div class="modal-content">
              <div class="modal-header">
-               <h5 class="modal-title" id="logInModalLabel">Login Below</h5>
+               <h5 class="modal-title" id="loginModalLabel">Login Below</h5>
 
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
