--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -13,12 +13,12 @@
 <body>
 
 	<header>
-		<nav class="navbar navbar-inverse">
+		<nav id="navbar" class="navbar navbar-inverse">
 				<div class="container-fluid">
 
 						<ul class="nav navbar-left">
 							<li class="active"><a href="/">Home</a></li>
-							<li><a href="/user">Users</a></li>									
+							<li><a href="/user">Users</a></li>
 							<li><a href="/artist">Artists</a></li>
 						</ul>
 
@@ -35,7 +35,7 @@
 			<div class="container-fluid text-center">
 				<div class="col-lg-12 col-sm-12">
 					<form class= "form-inline-block" action="/event" method="POST">
-				<h4> Create Event for <%=currentArtist.name%></h4>
+				<h1> Create Event for <%=currentArtist.name%></h1>
 				<select class="invisible" name="artistId">
 		            <option value="<%=currentArtist._id%>"><%= currentArtist.name %></option>
 		        </select> <br/>
@@ -55,7 +55,7 @@
 						<label class= "control-label" for="eventDescription">Event Description:</label><br />
 						<textarea name="description" rows="12" cols="80" placeholder="Description"></textarea><br /><br />
 
-						<button class="btn btn-success mb-2 btn-block" type="submit">Submit Changes</button>
+						<button id= "new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 					</form>
 				</div>
 			</div>
