--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -12,7 +12,9 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-inverse">
+
+		<nav id= "navbar" class="navbar navbar-inverse">
+
 				<div class="container-fluid">
 
 						<ul class="nav navbar-left">
@@ -50,7 +52,7 @@
 					Password: <input type="password" name="password" placeholder="password" value="<%=user.password%>"> <br>
 		 -->
 
-					<button class="btn btn-success mb-2 btn-block" type="submit">Submit Changes</button>
+					<button id= "edit-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 				</form>
 			</div>
 
