--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -49,7 +49,7 @@
 
               @font-face {
                 font-family: AirwaysPERSONALUSEONLY;
-                src: url('../Airways_PERSONAL_USE_ONLY copy.ttf');
+                src: url('../Airways_PERSONAL_USE_ONLY.ttf');
               }
 
             	.st0{fill:none;}
@@ -57,12 +57,11 @@
             	.st2{font-family:'AirwaysPERSONALUSEONLY';}
             	.st3{font-size:300px;}
             </style>
+
             <rect x="24" y="47.3" class="st0" width="1220.1" height="458.1"/>
             <text transform="matrix(1 0 0 1 23.9834 257.2144)" class="st1 st2 st3">EarShare</text>
 
             </svg>
-
-
 
             <h1>Share Your Ears With Your Peers!</h1>
         </div>
