--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -212,7 +212,7 @@
 
   <footer class="container-fluid text-center">
     <form action="/logout" method="GET">
-        <input type="submit" class="btn-block" id="logout" value="Logout" />
+        <input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
     </form>
   </footer>
 
