--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -65,7 +65,7 @@
 
 	<footer class="container-fluid text-center">
 		<form action="/logout" method="GET">
-   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+   			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
 		</form>
 	</footer>
 
