--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -61,7 +61,7 @@
 	<footer class="container-fluid text-center">
 		<%if (loggedIn) { %>
 			<form action="/logout" method="GET">
-	   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+	   			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
 			</form>
 		<%}%>
 	</footer>
