--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -49,7 +49,7 @@
 
 		<!-- 		unable to edit password. if we set the value as the user password, the form will generate the password hash.
 					for this to work, I think we'd need to bcrypt the password that's submitted in this form.
-					Password: <input type="password" name="password" placeholder="password" value="<%=user.password%>"> <br>
+					Password: <input type="password" name="password" placeholder="password" value="user.password%>"> <br>
 		 -->
 
 					<button id= "edit-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
@@ -60,7 +60,7 @@
 
 	<footer class="container-fluid text-center">
 		<form action="/logout" method="GET">
-   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+   			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
 		</form>
 	</footer>
 
