--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -64,7 +64,7 @@
 
 		<%if (loggedIn) { %>
 			<form action="/logout" method="GET">
-	   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+	   			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
 			</form>
 		<%}%>
 
