--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -130,7 +130,7 @@
 
 		<footer class="container-fluid text-center">
 			<form action="/logout" method="GET">
-	   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+	   			<input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
 			</form>
 		</footer>
 
