--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -183,8 +183,11 @@
                     </div>
 
                     <div class="tab-pane fade in" id="tab4">
-
+                      <%if (artist.usersWhoLike.length === 1){%>
+                        <h3> <%=artist.usersWhoLike.length%> Fan</h3>
+                      <%} else {%>
                         <h3> <%=artist.usersWhoLike.length%> Fans</h3>
+                      <%}%>
 
                       <ul> <% for (let i = 0; i < artist.usersWhoLike.length; i++) { -%>
                         <li> <a href="/user/<%=artist.usersWhoLike[i].id%>"> <%=artist.usersWhoLike[i].username%> </a></li>
