log in and sign up links don't become white after clicking

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -28,8 +28,8 @@
               </ul>
 
               <ul class= "nav navbar-right">
-                <li><a href= "#" data-toggle="modal" data-target="#loginModal">Log In</a></li>
-                 <li><a href= "#" data-toggle="modal" data-target="#registerModal">Sign Up</a></li>
+                <li><a data-toggle="modal" data-target="#loginModal">Log In</a></li>
+                 <li><a data-toggle="modal" data-target="#registerModal">Sign Up</a></li>
               </ul>
 
           </div>
