--- a/less/style.less
+++ b/less/style.less
@@ -3,12 +3,6 @@
 @linkFont: 'Maven Pro', sans-serif;
 @textFont: 'Maven Pro', sans-serif;
 
-
-html {
-	background-color: #eceff1;
-}
-
-
 #navbar {
 	background-color: #102027;
 	font-family: @navFont;
@@ -182,11 +176,20 @@ ul {
 	font-family: @textFont;
 }
 
+
+#createNewEvent {
+	&:hover {
+		color: white
+	}
+
 #tab1, #tab2, #tab3, #tab4 {
 	font-family: @textFont;
 	font-size: 1.5em;
-		a {
+	}
+		ul {
 			font-size: 1.5em;
+		}
+		a {
 			text-decoration: none;
 			color: #f4511e;
 				&:hover {
@@ -244,8 +247,4 @@ ul {
 					color: #101f27;
 				}
 		}
-}
-
-#the-font {
-	background-image: url('/logo/lrg.svg')
 }
