--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -36,7 +36,7 @@
 		<div class="col-lg-12 col-sm-12">
 				<div class="row justify-content-around">
 
-	    		<div class="card hovercard">
+	    		<div class="card-hovercard">
 
 	        	<div class="card-background">
 	            <img id="userListPic" class="card-bkimg" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
