--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Music App Landing Page</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:500,700|Wire+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:500,700|Permanent+Marker|Shrikhand" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -45,7 +45,7 @@
           <div class="container text-center">
 
             <h1>EarShare</h1>
-            <h1>Share Your Ears With Your Peers!</h1>
+            <h3>Share Your Ears With Your Peers!</h3>
         </div>
       </div>
     </div>
