--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,3 @@
-html {
-  background-color: #eceff1;
-}
 #navbar {
   background-color: #102027;
   font-family: 'Maven Pro', sans-serif;
@@ -157,25 +154,24 @@ ul {
 .hidden-xs {
   font-family: 'Maven Pro', sans-serif;
 }
-#tab1,
-#tab2,
-#tab3,
-#tab4 {
+#createNewEvent:hover {
+  color: white;
+}
+#createNewEvent #tab1,
+#createNewEvent #tab2,
+#createNewEvent #tab3,
+#createNewEvent #tab4 {
   font-family: 'Maven Pro', sans-serif;
   font-size: 1.5em;
 }
-#tab1 a,
-#tab2 a,
-#tab3 a,
-#tab4 a {
+#createNewEvent ul {
   font-size: 1.5em;
+}
+#createNewEvent a {
   text-decoration: none;
   color: #f4511e;
 }
-#tab1 a:hover,
-#tab2 a:hover,
-#tab3 a:hover,
-#tab4 a:hover {
+#createNewEvent a:hover {
   color: #1c313a;
 }
 .jumbotron {
@@ -188,6 +184,12 @@ ul {
 }
 #homepage-jumbo h1,
 #index-jumbo h1 {
+  font-family: 'Shrikhand', cursive;
+  color: rgba(230, 96, 67, 0.75);
+  font-size: 5em;
+}
+#homepage-jumbo h3,
+#index-jumbo h3 {
   font-family: 'Permanent Marker', cursive;
   font-size: 3em;
   color: #e2f1f8;
