title FONT FINALLY

--- a/less/style.less
+++ b/less/style.less
@@ -212,7 +212,9 @@ ul {
 		h1 {
 			font-family: @titleFont;
 			color: rgba(230, 96, 67, 0.75);
-			font-size: 7em;
+			text-shadow: 3px 3px 0px #62717b, 5px 5px 0px #889DAB;
+			letter-spacing: 5px;
+			font-size: 9em;
 		}
 
 		h3 {
