--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -49,7 +49,7 @@
 			        	<div class="card-info"> <span class="card-title"><h3> <%=event.name%></h3></span>
 
 								<form action="/event/<%=event.id%>/addUser/<%=user.id%>" method="GET">
-			                      <input type="submit" class="btn btn-info btn-lg" id="event-button" value="&plus; Attend <%=event.name%>" />
+			                      <input type="submit" class="btn btn-info btn-lg" id="event-button" value="Attend <%=event.name%>" />
 			                    </form>
 
 			      	</div>
@@ -118,7 +118,7 @@
 				<div class="col-lg-12 col-sm-12">
 					<%for (let i = 0; i < bandMembers.length; i++) {%>
 						<%if (bandMembers[i]._id.toString() === user._id.toString()) {%>
-							<a class="btn btn-light btn-sm btn-block" id="edit-event" href="/event/<%= event.id %>/edit">Edit Event</a>
+							<a class="btn btn-outline-dark btn-sm btn-block" id="edit-event" href="/event/<%= event.id %>/edit">Edit Event</a>
 								<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
 									<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
 								</form>
