--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -28,7 +28,7 @@
                 </ul>
 
                 <ul class="nav navbar-right">
-                  <li><a href="/user"><span class="glyphicon glyphicon-plus"></span>Back to Users</a></li>
+                  <li><a href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
                 </ul>
               </div>
             </div>
@@ -52,9 +52,10 @@
 
                   <div class="card-info"> <span class="card-title"><h3><%=artist.name%></h3></span>
 
-                    <form action="/artist/addUser/<%=user.id%>/<%=artist._id%>" method="GET">
+                    <a href="/artist/addUser/<%=user.id%>/<%=artist._id%>" class="btn btn-info btn-lg" id="like-button"><span class="glyphicon glyphicon-heart"></span> Like <%=artist.name%></a>
+                   <!--  <form action="/artist/addUser/<%=user.id%>/<%=artist._id%>" method="GET">
                       <input type="submit" class="btn btn-info btn-lg" id="like-button" value="&hearts; Like <%=artist.name%>" />
-                    </form>
+                    </form> -->
                 </div>
             </div>
           </div>
