--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -24,7 +24,7 @@
 								</ul>
 
 								<ul class="nav navbar-right">
-									<li><a href="/event"><span class="glyphicon glyphicon-plus"></span>Back to Events</a></li>
+									<li><a href="/event"><span class="glyphicon glyphicon-plus"></span> Back to Events</a></li>
 								</ul>
 							</div>
 						</div>
@@ -47,11 +47,8 @@
 			        	</div>
 
 			        	<div class="card-info"> <span class="card-title"><h3> <%=event.name%></h3></span>
-
-								<form action="/event/<%=event.id%>/addUser/<%=user.id%>" method="GET">
-			                      <input type="submit" class="btn btn-info btn-lg" id="event-button" value="Attend <%=event.name%>" />
-			                    </form>
-
+			        			<a href="/event/<%=event.id%>/addUser/<%=user.id%>" class="btn btn-info btn-lg" id="event-button"><span class="glyphicon glyphicon-calendar"> </span> Attend <%=event.name%></a>
+								
 			      	</div>
 			    	</div>
 					</div>
