changed carousel background

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,7 +216,7 @@ ul {
   color: #e2f1f8;
 }
 #carousel {
-  background-color: rgba(207, 216, 220, 0.7);
+  background-color: #000000;
 }
 #loginModal,
 #registerModal {
