--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -11,27 +11,31 @@
 	</style>
 </head>
 <body>
-	<header>
+
+<!-- 	NAV
+ -->	<header>
 
 		<nav id= "navbar" class="navbar navbar-inverse">
 
-				<div class="container-fluid">
+			<div class="container-fluid">
 
-						<ul class="nav navbar-left">
-							<li class="active"><a href="/">Home</a></li>
-							<li><a href="/artist">Artists</a></li>
-							<li><a href="/event">Events</a></li>
-						</ul>
+				<ul class="nav navbar-left">
+					<li class="active"><a href="/">Home</a></li>
+					<li><a href="/artist">Artists</a></li>
+					<li><a href="/event">Events</a></li>
+				</ul>
 
-						<ul class="nav navbar-right">
-							<li><a href="/user/<%= user.id %>"><span class="glyphicon glyphicon-plus"></span>Back to Profile</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</header>
+				<ul class="nav navbar-right">
+					<li><a href="/user/<%= user.id %>"><span class="glyphicon glyphicon-plus"></span>Back to Profile</a></li>
+				</ul>
+			</div>
+		</nav>
+
+	</header>
 
 
+<!-- 	EDIT CONTENTS
+ -->	<main>
 		<div class="container-fluid text-center">
 			<div class="col-lg-12 col-sm-12">
 				<h1>Edit <%=user.username%>'s Information</h1>
@@ -55,10 +59,11 @@
 					<button id= "edit-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 				</form>
 			</div>
+		</div>
+	</main>
 
-
-
-	<footer class="container-fluid text-center">
+<!-- 	LOGOUT
+ -->	<footer class="container-fluid text-center">
 		<form action="/logout" method="GET">
    			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
 		</form>
