--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -40,29 +40,29 @@
         <% if (message) { -%>
           <p id="home-message" style="background-color: rgba(255, 138, 101, 0.7)"><%= message %></p>
         <% } -%>
+
+
       <div id="homepage-jumbo">
         <div class = "jumbotron">
           <div class="container text-center">
-
             <h1>EarShare</h1>
             <h3>Share Your Ears With Your Peers!</h3>
+          </div>
         </div>
       </div>
-    </div>
-
-
-
 
       <div id="carousel">
         <div class="container">
            <div class="row">
                <div class="col-md-12">
                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
                        <ol class="carousel-indicators">
                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                        </ol>
+
                        <div class="carousel-inner">
                            <div class="item active">
                               <img src="../images/Webp.net-resizeimage.jpg" alt="First slide">
@@ -73,36 +73,33 @@
                                  <p> User Description</p>
                                  <%} else {%>
                                    <img id= "userListPic" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].img%>">
-
-                                       <h3>
-                                          <a id="user-carousel" href="/user"><%=users[userNum].username%></a></h3>
-                                       <p><%=users[userNum].description%></p>
+                                    <h3>
+                                    <a id="user-carousel" href="/user"><%=users[userNum].username%></a></h3>
+                                    <p><%=users[userNum].description%></p>
 
                                  <%}%>
                                </div>
-                           </div>
+                             </div>
+
                            <div class="item">
-                               <img src="../images/Webp.net-resizeimage.jpg" alt="Second slide">
-                               <div class="carousel-caption">
-                                 <%if (artists[0] === undefined) {%>
+                             <img src="../images/Webp.net-resizeimage.jpg" alt="Second slide">
+                                <div class="carousel-caption">
+                                  <%if (artists[0] === undefined) {%>
                                    <img alt="Static Artist Image" src="../images/missing-image.png">
                                    <h3> Artist</h3>
                                    <p> Artist Description</p>
                                  <%} else {%>
                                    <img id="artistListPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].img%>">
-                                     <h3>
-                                        <a id="artist-carousel" href="/artist"><%=artists[artistNum].name%></a></h3>
-
-                                     <p><%=artists[artistNum].description%></p>
-
-
+                                   <h3>
+                                    <a id="artist-carousel" href="/artist"><%=artists[artistNum].name%></a></h3>
+                                    <p><%=artists[artistNum].description%></p>
                                  <%}%>
-                               </div>
-                          </div>
+                              </div>
+                            </div>
 
 
                            <div class="item">
-                               <img src="../images/Webp.net-resizeimage.jpg" alt="Third slide">
+                             <img src="../images/Webp.net-resizeimage.jpg" alt="Third slide">
                                <div class="carousel-caption">
                                <%if (events[0] === undefined) {%>
                                  <img alt="Static Event Image" src="../images/missing-image.png">
@@ -110,32 +107,31 @@
                                  <p> Event Description</p>
                                <%} else {%>
                                  <img id= "eventListPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
-                                   <h3>
-                                       <a id="event-carousel" href="/event"><%=events[eventNum].name%></a></h3>
-                                   <p><%=events[eventNum].description%></p>
-
+                                 <h3>
+                                  <a id="event-carousel" href="/event"><%=events[eventNum].name%></a></h3>
+                                  <p><%=events[eventNum].description%></p>
                                <%}%>
-                               </div>
+                              </div>
                            </div>
-                       </div>
-                       <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                           <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
-                               href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
-                               </span></a>
-                   </div>
-                   <div class="main-text hidden-xs">
-                       <div class="col-md-12 text-center">
 
-                           <div class="">
-                           </div>
+                       </div>
+
+                       <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+                       <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+
+                     </div>
+
+                     <div class="main-text hidden-xs">
+                       <div class="col-md-12 text-center">
+                         <div class=""></div>
                        </div>
                    </div>
                </div>
            </div>
        </div>
 
-        <div id="push">
-        </div>
+        <div id="push"></div>
+
      </div>
 
 
@@ -143,14 +139,13 @@
        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
          <div class="modal-dialog" role="document">
            <div class="modal-content">
+
              <div class="modal-header">
                <h5 class="modal-title" id="loginModalLabel">Login Below</h5>
-
-               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                 <span aria-hidden="true">&times;</span>
-               </button>
-
-             </div>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
 
                <div class="modal-body">
                  <div class="container-fluid">
@@ -158,21 +153,16 @@
                      <form action="/login" method="POST" id="login">
                          <div class="form-group">
                            <h4>Sign In</h4>
-
                                <input type="text" name="username" placeholder="Username">
                                <input type="password" name="password" placeholder="Password">
-                                <button type="submit" class= "btn btn-outline-secondary">Submit</button>
+                               <button type="submit" class= "btn btn-outline-secondary">Submit</button>
                          </div>
-
                          </form>
-
                       </div>
                    </div>
                 </div>
 
-
-
-             </div>
+            </div>
          </div>
        </div>
 
@@ -191,8 +181,6 @@
 
                <div class="modal-body">
                  <div class="container-fluid">
-
-
                   <div class="row">
 
                      <form action="/register" method="POST" id="registration">
