--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -13,9 +13,10 @@
   </head>
   <body>
 
-      <header>
+<!--     NAV
+ -->  <header>
         <nav id="navbar">
-    		<nav class="navbar navbar-inverse">
+    		  <nav class="navbar navbar-inverse">
     				<div class="container-fluid">
 
     						<ul class="nav navbar-left">
@@ -30,9 +31,11 @@
     					</div>
     				</div>
     			</nav>
-    		</header>
+        </nav>
+    	</header>
 
-        <main>
+<!--         NEW ARTIST FORM
+ -->  <main>
 
           <div class="container-fluid text-center">
     				<div class="col-lg-12 col-sm-12">
